--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build-and-push-ecr:
-    name: Build, Test, and Push to ECR
+    name: Build, Test, Analyze, and Push to ECR
     runs-on: ubuntu-22.04
     permissions:
       id-token: write
@@ -29,14 +29,34 @@ jobs:
           ref: ${{ github.event.client_payload.ref }}
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build, Test and SonarQube Analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=AdrianB17_boardgame-main \
+            -Dsonar.organization=tu_organizacion_sonarcloud \
+            -Dsonar.host.url=https://sonarcloud.io
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
