--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 		
 	</properties>
 
+	<properties>
+		<sonar.organization>adrianb17</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
