--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
     		<sonar.language>java</sonar.language>
 
-		<sonar.organization>abastidas_devops</sonar.organization>
+		<sonar.organization>adrianb17</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		
 	</properties>
