--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,20 @@ on:
       - '**'
 
 jobs:
-  setup:
-    name: Checkout and Setup
+  build-and-push-ecr:
+    name: Build, Test, Analyze, and Push to ECR
     runs-on: ubuntu-22.04
-    outputs:
-      ref: ${{ steps.set-ref.outputs.ref }}
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      ENV: dev
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.ref }}
-
-      - name: Set ref output
-        id: set-ref
-        run: echo "ref=${GITHUB_REF}" >> $GITHUB_OUTPUT
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -34,15 +34,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-  test-and-analyze:
-    name: Build, Test, and Analyze with SonarCloud
-    runs-on: ubuntu-22.04
-    needs: setup
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
       - name: Cache SonarQube packages
         uses: actions/cache@v4
@@ -58,7 +49,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build, Test and SonarCloud Analysis
+      - name: Build, Test and SonarQube Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
@@ -66,17 +57,6 @@ jobs:
             -Dsonar.projectKey=AdrianB17_boardgame-main \
             -Dsonar.organization=adrianb17 \
             -Dsonar.host.url=https://sonarcloud.io
-
-  build-and-push-image:
-    name: Build and Push Docker Image to Amazon ECR
-    runs-on: ubuntu-22.04
-    needs: test-and-analyze
-    env:
-      ENV: dev
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -98,10 +78,13 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-  trigger-ecs:
+  trigger-deploy-ecs:
     name: Trigger ECS Deployment
     runs-on: ubuntu-22.04
-    needs: build-and-push-image
+    permissions:
+      contents: write
+    needs: build-and-push-ecr
+
     steps:
       - name: Trigger ECS Deployment Workflow
         uses: peter-evans/repository-dispatch@v2
